<resources>
    <string name="app_name">Döviz Takibi</string>
    <string name="usernameReg">Kullanıcı Adı</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Şifre</string>
    <string name="sign_upReg">Üye ol</string>
    <string name="sign_inLog">Giriş Yap</string>
    <string name="signin_redirect">Zaten hesabın var mı? Giriş yap!</string>
    <string name="forgot_password">Şifremi unuttum?</string>
    <string name="signup_redirect">Hesabın yok mu? Kayıt ol</string>
    <string name="auth_failed">Kullanıcı adı veya şifre yanlış</string>
    <string name="pass_length_err">Şifre en az 6 hane olmalıdır</string>
    <string name="email_exists">Bu mail adresine daha önce tanımlanmış bir hesap mevcuttur. </string>
    <string name="signup_success">Kayıt başarılı</string>
    <string name="verificating">Verificating...</string>
    <string name="userNameIsEmpty">Kullanıcı adı boş olamaz.</string>
    <string name="passIsEmpty">Şifre bilgisi boş olamaz.</string>
    <string name="emailIsEmpty">Email bilgisi boş olamaz.</string>
    <string name="emailcheck">Lütfen geçerli bir email adresi girin</string>
    <string name="invalid_email">Geçersiz mail adresi</string>
    <string name="send_email_success">Email başarıyla gönderildi.</string>
    <string name="currentExhangePageTitle">Güncel Kur Değerleri</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="money_type">Para Birimi</string>
    <string name="money_sell_price">Satış</string>
    <string name="money_buying_price">Alış</string>
    <string name="money_change_rate">Değişim</string>
    <string name="label_registry_of_email">E-mail Adresi:</string>
    <string name="hint_new_email">Yeni Email</string>
    <string name="btn_change">Değiştir</string>
    <string name="new_pass">Yeni Şifre</string>
    <string name="label_if_you_change_pass">Sifre Değiştirme</string>
    <string name="label_if_you_change_email">Email Adres Değiştirme</string>
    <string name="header_Profile_Information">Profil Bilgilerim</string>
    <string name="header_Application_Information">Uygulama Hakkında</string>
    <string name="message_email_updated">E-mail Adresiniz Güncellendi, yeni mail adresiniz ile giriş yapabilirsiniz.</string>
    <string name="message_error_update_email">E-Mail Güncellenemedi.</string>
    <string name="message_empty_email_area">E-mail adresi giriniz.</string>
    <string name="hakkinda_tanim">Hello gardeşşş</string>
    <string name="toast_logout">Oturum kapatıldı.</string>
    <string name="btn_yes">Evet</string>
    <string name="btn_no">Hayır</string>
    <string name="dialog_for_logout">Oturumu kapatmak istediğinizden emin misiniz?</string>
    <string name="sign_in_text_on_registration_activity">Sign in text on registration activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_varliklarim_">Varliklarim_Activity</string>
    <string name="have_tl_amount">Mevcut Turk Lirası:</string>
    <string name="label_hasnot_exchange_amount">MEVCUT DÖVİZ VARLIĞINIZ BULUNMAMAKTADIR...</string>
    <string name="title_activity_chat">Sohbet Ekranı</string>
    <string name="FIREBASE_CHAT_URL">""</string>
    <string name="label_chatScreen">Sohbet</string>
    <string name="buy_add">Alış Ekle</string>
    <string name="emptyScreenArea">Lütfen ekrandaki bilgileri giriniz.</string>
    <string name="emptyBuyingPrice">Girilen alış miktarı geçersizdir.</string>
    <string name="emptyRateCurrency">Girilen kur değeri geçersizdir.</string>
    <string name="emptyMoneyType">Girilen para birimi geçersizdir.</string>
    <string name="Action">Action</string>
    <string name="cancelProsesMessage">İşlem iptal edildi.</string>
    <string name="confirmProsesMessage">Alış işlemi başarılı</string>
    <string name="varliklar">/Varliklar/</string>
    <string name="TLDegeri">/TLDegeri</string>
    <string name="buyingCurrencyAmount">Alınacak döviz tutarı:</string>
    <string name="EnterChar">\n</string>
    <string name="areYouSureForBuying">Alım İşlemini Onaylıyor Musunuz?</string>
    <string name="buyingTotalAmount">Ödenecek toplam tutar:</string>
    <string name="joinUs">Hesap Oluştur</string>
    <string name="signIn">Giriş Yap</string>
    <string name="exchangeApp">Döviz Takibi</string>
    <string name="pwReset">Şifre Sıfırlamak için mail adresinizi girip şifre sıfırlama talebi oluşturabilirsiniz</string>


</resources>
